--- a/css/style.css
+++ b/css/style.css
@@ -24,15 +24,28 @@ body {
   padding: 1% 15%;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: white;
-}
-
-#title h1 {
+h1 {
   font-family: 'Montserrat-black', sans-serif;
   font-size: 3.5rem;
   line-height: 1.5;
+}
+
+h2 {
+  font-family: 'Montserrat-bold', sans-serif;
+  font-size: 3rem;
+  line-height: 1.5;
+}
+
+#title {
+  background-color: #ff4c68;
+  color: white;
+  padding-bottom: 7%;
+}
+
+@media (max-width: 1028px) {
+  #title {
+    text-align: center;
+  }
 }
 
 #title .download-button {
@@ -40,12 +53,24 @@ body {
 }
 
 #title .header-image {
-  width: 60%;
+  width: 65%;
   transform: rotate(25deg);
+  position: absolute;
+  right: 25%;
+}
+
+@media (max-width: 1028px) {
+  #title .header-image {
+    width: 70%;
+    transform: rotate(0);
+    position: static;
+  }
 }
 
 #features {
   padding: 7% 0;
+  background-color: white;
+  position: relative;
 }
 
 #features .features-box {
@@ -70,6 +95,68 @@ body {
 #features .features-box .features-description {
   color: #8f8f8f;
   font-size: 1rem;
+}
+
+#testimonials {
+  padding: 7% 0;
+  background-color: #ef8172;
+  color: white;
+}
+
+#testimonials .testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+#press .press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+#pricing .pricing-box {
+  padding: 3% 2%;
+}
+
+#pricing .pricing-box .card .card-body p {
+  color: #8f8f8f;
+  font-size: 1rem;
+}
+
+#cta {
+  padding: 7% 0;
+  background-color: #ff4c68;
+  color: white;
+}
+
+#cta h3 {
+  font-family: 'Montserrat-black', sans-serif;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+#cta .download-button {
+  margin: 5% 3% 5% 0;
+}
+
+#footer {
+  padding: 5% 0;
+  background-color: #fff;
+}
+
+#footer .social-icon {
+  margin: 0 1% 2%;
+}
+
+#footer p {
+  color: #8f8f8f;
+  font-size: 0.8rem;
 }
 
 /*# sourceMappingURL=style.css.map */
